# sddm-theme

./: CMakeLists.txt
debian/: control
src/qml/: Main.qml
